{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 26,
  "lineage": "078b1835-1d40-68da-877b-8161e5d26b9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e68a9d2e9d134f10",
            "association_id": "eipassoc-0d3ebb5da5ef030b1",
            "domain": "vpc",
            "id": "eipalloc-0e68a9d2e9d134f10",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cb6d95046e55f18c",
            "private_dns": "ip-10-0-0-171.ec2.internal",
            "private_ip": "10.0.0.171",
            "public_dns": "ec2-44-206-134-202.compute-1.amazonaws.com",
            "public_ip": "44.206.134.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:internet-gateway/igw-00c00853437a343f6",
            "id": "igw-00c00853437a343f6",
            "owner_id": "949389173118",
            "tags": {
              "Name": "Igetway"
            },
            "tags_all": {
              "Name": "Igetway"
            },
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e68a9d2e9d134f10",
            "connectivity_type": "public",
            "id": "nat-08a133361ed1840ab",
            "network_interface_id": "eni-0cb6d95046e55f18c",
            "private_ip": "10.0.0.171",
            "public_ip": "44.206.134.202",
            "subnet_id": "subnet-0adcc813c49b2f906"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_subnet.publicA",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e68a9d2e9d134f10",
            "connectivity_type": "public",
            "id": "nat-02aa03594921f0b4d",
            "subnet_id": "subnet-04d0c04fc9631bf08"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_subnet.publicB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:route-table/rtb-049aba9696dd76d11",
            "id": "rtb-049aba9696dd76d11",
            "owner_id": "949389173118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08a133361ed1840ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myEIP",
            "aws_nat_gateway.NAT-GW-A",
            "aws_subnet.publicA",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publRT-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:route-table/rtb-06b5962f93a773ca4",
            "id": "rtb-06b5962f93a773ca4",
            "owner_id": "949389173118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c00853437a343f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publRT-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:route-table/rtb-09f71a3a0ab5e419d",
            "id": "rtb-09f71a3a0ab5e419d",
            "owner_id": "949389173118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c00853437a343f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PriRTAss-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047f1d1aeb1ce8e54",
            "route_table_id": "rtb-049aba9696dd76d11",
            "subnet_id": "subnet-0af11a7e536ef0cbf"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_nat_gateway.NAT-GW-A",
            "aws_route_table.privRT-A",
            "aws_subnet.privateA",
            "aws_subnet.publicA",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PriRTAss-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRTAss-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fad58f55f407aa2e",
            "route_table_id": "rtb-06b5962f93a773ca4",
            "subnet_id": "subnet-0adcc813c49b2f906"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publRT-A",
            "aws_subnet.publicA",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRTAss-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04464ab1544f5988c",
            "route_table_id": "rtb-09f71a3a0ab5e419d",
            "subnet_id": "subnet-04d0c04fc9631bf08"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publRT-B",
            "aws_subnet.publicB",
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:subnet/subnet-0af11a7e536ef0cbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af11a7e536ef0cbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949389173118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateone"
            },
            "tags_all": {
              "Name": "privateone"
            },
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:subnet/subnet-0c35c03984bf4ecb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c35c03984bf4ecb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949389173118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatetwo"
            },
            "tags_all": {
              "Name": "privatetwo"
            },
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:subnet/subnet-0adcc813c49b2f906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adcc813c49b2f906",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949389173118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicone"
            },
            "tags_all": {
              "Name": "publicone"
            },
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:subnet/subnet-04d0c04fc9631bf08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d0c04fc9631bf08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949389173118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publictwo"
            },
            "tags_all": {
              "Name": "publictwo"
            },
            "vpc_id": "vpc-00bfb795fea2165e0"
          },
          "dependencies": [
            "aws_vpc.vpc_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949389173118:vpc/vpc-00bfb795fea2165e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2279adbacd38cb9",
            "default_route_table_id": "rtb-00de148c44536333e",
            "default_security_group_id": "sg-05e98470028beee18",
            "dhcp_options_id": "dopt-053a938dc068e8ddd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00bfb795fea2165e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00de148c44536333e",
            "owner_id": "949389173118",
            "tags": {
              "Name": "vpc_task"
            },
            "tags_all": {
              "Name": "vpc_task"
            }
          }
        }
      ]
    }
  ]
}